--- a/server/.env.example
+++ b/server/.env.example
@@ -1,19 +1,22 @@
-CLOUDINARY_URL=
-
-REDIS_HOST=host.docker.internal
-REDIS_PORT=6379
-CLOUDINARY_API_SECRET=
-CLOUDINARY_API_KEY=
-CLOUDINARY_CLOUD_NAME=
-MONGO_URI=
+MONGODB_URI=
 EMAIL_USER=
 EMAIL_PASS=
 IMAP_SERVER=imap.gmail.com
 IMAP_PORT=993
+
+CLOUDINARY_API_SECRET=
+CLOUDINARY_API_KEY=
+CLOUDINARY_CLOUD_NAME=
+
 KAFKA_BROKER=localhost:9092
-BOOTSTRAP_SERVER=
-KAFKA_TOPIC=email-topicd
+BOOTSTRAP_SERVER=localhost:9092
+KAFKA_TOPIC=email-topic
 KAFKAJS_NO_PARTITIONER_WARNING=1
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+GEMINI_API_KEY=
 
 DOC_PROMPT_INSTRUCTION="You are an expert AI document classification system trained to understand text layout, semantics, and context. Your goal is to identify the type of document accurately."
 DOC_PROMPT_CATEGORIES='["invoice", "receipt", "contract", "id_card", "resume"]'
